--- a/index.html
+++ b/index.html
@@ -1,35 +1,37 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Color Cards</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
+	<title>Color Cards Guessing Name</title>
+
+
 </head>
 <body>
-    <div class="title-container">   
-        <h1>Color Cards</h1>
-        <span id="color-display">RGB</span>
-        <h4>Guess the color</h4>
-        <div id="stripe">
-            <button id="reset">New colors</button>
-            <span id="message"></span>
-            <button id="reset">Easy</button>
-            <button id="reset">Hard</button>
-        </div>
-    </div>
 
-    <div id="container">
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
-        <div class="square"></div>
-    </div>
+<h1>Guess the color of...
+	<br>
+	<span id="colorDisplay">RGB</span> 
+	<br>
+	Give it a try!</h1>
 
+<div id="nav">
+	<button id="reset">More Colors</button>
+	<span id="message"></span>
+	<button class="mode">Easy</button>
+	<button class="mode selected">Hard</button>
+</div>
 
-    <script src="script.js"></script>
+<div id="container">
+	<div class="square"></div>
+	<div class="square"></div>
+	<div class="square"></div>
+	<div class="square"></div>
+	<div class="square"></div>
+	<div class="square"></div>
+</div>
+
+	<script type="text/javascript" src="script.js"></script>
 </body>
+
+</html>
 </html>
