updating JS functions

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	Give it a try!</h1>
 
 <div id="nav">
-	<button id="reset">More Colors</button>
+	<button id="reset">New Colors</button>
 	<span id="message"></span>
 	<button class="mode">Easy</button>
 	<button class="mode selected">Hard</button>
